# monero-api-cli

./: .gitignore  LICENSE  PKGBUILD  README.md  launcher.py  monero-api-cli.config  monero-api-cli.spec  pyproject.toml  requirements.txt
src/monero-api-cli/: __main__.py  cli.py  help.py  rpc_methods.py  version.py
src/monero_api_cli/: __main__.py  cli.py  functions.py  help.py  rpc_methods.py  version.py
src/monero_api_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
