[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "monero-api-cli"
version = "0.1.0-rc.4"
authors = [
  { name="Dvd-Znf", email="email@dvdznf.xyz" },
]
description = "Cli for interacting with the MoneroDaemon-RPC API"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["monero", "cli-app"]
requires-python = ">=3.7"
dependencies = [
  "prompt-toolkit",
  "requests",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
]

[project.scripts]
monero-api-cli = "monero_api_cli:__main__"

[project.urls]
"Homepage" = "https://github.com/Dvd-Znf/monero-api-cli"
"Bug Tracker" = "https://github.com/Dvd-Znf/monero-api-cli/issues"